[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/Actions/ItemPanel.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.392157, 0.372549, 0.372549, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 50
corner_detail = 13

[node name="ItemPanel" type="Panel"]
margin_right = 576.0
margin_bottom = 128.0
rect_min_size = Vector2( 576, 128 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 120.0
margin_bottom = 112.0
expand = true

[node name="Name" type="Label" parent="."]
margin_left = 160.0
margin_top = 16.0
margin_right = 215.0
margin_bottom = 30.0
text = "Name:"

[node name="Name_val" type="Label" parent="Name"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0

[node name="Amt" type="Label" parent="."]
margin_left = 160.0
margin_top = 64.0
margin_right = 215.0
margin_bottom = 78.0
text = "Amount:"

[node name="Amt_val" type="Label" parent="Amt"]
margin_left = 64.0
margin_right = 104.0
margin_bottom = 14.0

[node name="Price" type="Label" parent="."]
margin_left = 160.0
margin_top = 40.0
margin_right = 245.0
margin_bottom = 54.0
text = "Price offered:"

[node name="Price_val" type="Label" parent="Price"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 14.0

[node name="Sell 1" type="Button" parent="."]
margin_left = 504.0
margin_top = 8.0
margin_right = 568.0
margin_bottom = 28.0
text = "Sell 1"

[node name="Sell Half" type="Button" parent="."]
margin_left = 504.0
margin_top = 32.0
margin_right = 568.0
margin_bottom = 52.0
text = "Sell Half"

[node name="Sell All" type="Button" parent="."]
margin_left = 504.0
margin_top = 56.0
margin_right = 568.0
margin_bottom = 76.0
text = "Sell All"

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 152.0
margin_top = 96.0
margin_right = 216.0
margin_bottom = 116.0
focus_mode = 2
text = "Stats"
align = 0

[connection signal="pressed" from="Sell 1" to="." method="_on_Sell_1_pressed"]
[connection signal="pressed" from="Sell Half" to="." method="_on_Sell_Half_pressed"]
[connection signal="pressed" from="Sell All" to="." method="_on_Sell_All_pressed"]
